z-index fix

--- a/inject.css
+++ b/inject.css
@@ -14,6 +14,7 @@
 	border-radius: 2px;
 
 	text-align: center;
+	z-index: 99999;
 }
 
 #piQRCode {
